fixed reserveBook and borrowBook methods. returnBook method not working correctly yet